# netform

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: dev.md  diff.md  heavy-example.md  index.md  model.md
fixtures/: ambiguous_and_fallback.json  basic_replace.json  eos_heavy_semantic_drift.json  eos_reorder_keyed_stable.json  iosxe_heavy_reorder_keyed_stable.json  iosxe_reorder_keyed_stable.json  junos_heavy_reorder_keyed_stable.json  junos_reorder_keyed_stable.json  parse_uncertainty.json  reorder_keyed_stable.json  reorder_ordered.json  reorder_unordered.json
netform_cli/: Cargo.toml
netform_cli/src/: main.rs
netform_cli/tests/: cli_smoke.rs
netform_dialect_eos/: Cargo.toml
netform_dialect_eos/src/: lib.rs
netform_dialect_iosxe/: Cargo.toml
netform_dialect_iosxe/src/: lib.rs
netform_dialect_junos/: Cargo.toml
netform_dialect_junos/src/: lib.rs
netform_diff/: Cargo.toml
netform_diff/src/: engine.rs  findings.rs  flatten.rs  lib.rs  model.rs  normalize.rs  plan.rs  report.rs  tests.rs  util.rs
netform_diff/tests/: contract_shape.rs  determinism_corpus.rs  plan_output.rs  properties.rs  report_output.rs
netform_ir/: Cargo.toml
netform_ir/src/: lib.rs
netform_ir/testdata/: cisco_like.conf  junos_set_style.conf
netform_ir/tests/: golden_round_trip.rs  parser_structure.rs  round_trip.rs
schemas/: diff.schema.json  fixture.schema.json  normalization-pipeline.schema.json  order-policy.schema.json  plan.schema.json
scripts/: run_miri.sh
