[package]
name = "netform_dialect_eos"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Arista EOS dialect profile for netform lossless config parsing"
repository = "https://github.com/cyberwitchery/netform"
homepage = "https://github.com/cyberwitchery/netform"
documentation = "https://docs.rs/netform_dialect_eos"

[dependencies]
netform_ir = { version = "0.2.0", path = "../netform_ir" }
